--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
-        <!-- <script src="https://kit.fontawesome.com/5b53cddb71.js" crossorigin="anonymous"></script> -->
+        <title>Pokedex</title>
         <link rel="stylesheet" href="./style.css" >
     </head>
     <body>
+        <h1>Pokedex</h1>
+        <div class="container">
+            <div class="container" id="poke-container">
+            </div>
+        </div>
         <script src="./script.js"></script>
     </body>
 </html>
